--- a/libmudflap/mf-runtime.h.in
+++ b/libmudflap/mf-runtime.h.in
@@ -60,3 +60,4 @@ extern void __mf_unregister (uintptr_t ptr, uintptr_t sz);
 extern unsigned __mf_watch (uintptr_t ptr, uintptr_t sz);
 extern unsigned __mf_unwatch (uintptr_t ptr, uintptr_t sz);
 extern void __mf_report ();
+extern int __mf_set_options (const char *opts);
